<resources>
    <string name="app_name">TTPay</string>
    <string name="settings_baseline">Settings</string>
    <string name="logout_baseline">Logout</string>
    <string name="profile_baseline">Profile</string>
    <string name="admin_home_title">Home</string>
    <string name="catalog_item_title">Catalog items</string>
    <string name="home_baseline">Home</string>
    <string name="admin_home_create_merchant_button">Create new merchant</string>
    <string name="service_name">Service Name</string>
    <string name="duration_durationunit">Duration durationUnit</string>
    <string name="price_currency">Price currency</string>
    <string name="add">Add</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User email</string>
    <string name="article_name">Article Name</string>
    <string name="weight">Weight</string>
    <string name="back_button">Back Button</string>
    <string name="all_collected_data">All collected data</string>
    <string name="name_of_catalog">Name of catalog</string>
    <string name="create_the_catalog_item">Create the catalog</string>
    <string name="write_here_the_name_of_catalog">Write here the name of catalog...</string>
    <string name="all_collected_data_for_catalog_are">All collected data for the catalog:</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="ime_i_prezime">Ime i Prezime</string>
    <string name="the_transactions">The Transactions</string>
    <string name="the_merchants">The Merchants</string>
    <string name="the_products">The Products</string>
    <string name="Todo">Todo</string>
    <string name="the_catalog_item">The Catalog Item</string>
    <string name="Back_button">Back Button</string>
    <string name="all_catalogs">All catalogs</string>
    <string name="select_the_catalog_you_want_to_see">Select the catalog you want to see</string>
    <string name="back_Button">Back Button</string>
    <string name="All_catalogs">All catalogs</string>
    <string name="Select_the_catalog_you_want_to_see">Select the catalog you want to see</string>
    <string name="Back_Button">Back Button</string>
    <string name="All_Merchants">All merchants</string>
    <string name="bb">Back Button</string>
    <string name="all_products">All Products</string>
    <string name="articles">Articles</string>
    <string name="services">Services</string>
    <string name="Back">Back Button</string>
    <string name="all_transactions">All transactions</string>
    <string name="select_the_transaction_you_want_to_see">Select the transaction you want to see</string>
    <string name="follow_steps_to_create_catalog_item">Follow steps to create catalog item:</string>
    <string name="choose_the_services_you_want_to_add_to_the_catalog">Choose the services you want to add to the catalog.</string>
    <string name="choose_the_items_you_want_to_add_to_the_catalog">Choose the items you want to add to the catalog.</string>
    <string name="choose_the_user_s_you_want_to_assign_the_catalog_to">Choose the user(s) you want to assign the catalog to.</string>
    <string name="and_the_catalog_is_created">and ... The catalog is created!</string>
    <string name="start_creating_catalog">Start creating catalog</string>
    <string name="create_new_merchant">Create new merchant</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="role">Role</string>
    <string name="status">Status</string>
    <string name="create_merchant">Create merchant</string>
    <string name="create_new_product">Create new product</string>
    <string name="create_new_transaction">Create new transaction</string>
    <string name="catalog_name">Catalog Name</string>
    <string name="delete">Delete</string>
    <string name="Catalog_name">Catalog name</string>
    <string name="Catalog_Name">Catalog name</string>
    <string name="firstname_lastname">FirstName LastName</string>
    <string name="Price_currency">Price Currency</string>
    <string name="Add">Add</string>
    <string name="service_article_name">Service/Article Name</string>
    <string name="_0">0</string>
    <string name="_0_00">€0.00</string>
    <string name="transaction_description">Transaction description</string>
</resources>