<!-- Layout for each item in the services/articles RecyclerView -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/service_article_name" />

    <!-- + Symbol -->
    <ImageView
        android:id="@+id/img_plus"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_plus"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <!-- Quantity -->
    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"/>

    <!-- - Symbol -->
    <ImageView
        android:id="@+id/img_minus"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_minus"
        android:layout_marginEnd="8dp"
        android:importantForAccessibility="no" />

    <!-- Price -->
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:layout_marginStart="8dp"/>

</LinearLayout>
