<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Additional details for the service -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView_service_name"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:background="@drawable/red_border_item"
            android:gravity="center"
            android:text="@string/service_name"
            android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_durationAndUnit"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/duration_durationunit"
                android:textSize="14sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView_priceAndCurrency"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/price_currency"
                android:textSize="14sp"
                android:gravity="center" />
        </LinearLayout>
</LinearLayout>