<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.foi.techtitans.ttpay.catalogItemManagement.activity_catalogItemManagement.AllCatalogsMerchantActivity">

    <!-- Back button -->
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/back_Button"
        android:src="@drawable/baseline_arrow_back"
        android:focusable="true" />

    <!-- Title "All catalogs" -->
    <TextView
        android:id="@+id/tv_all_catalogs_merchant_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/All_catalogs"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Message above RecyclerView -->
    <TextView
        android:id="@+id/tv_catalog_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_all_catalogs_merchant_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/Select_the_catalog_you_want_to_see"
        android:textSize="18sp" />

    <!-- ProgressBar for loading -->
    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_catalog_select"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <!-- RecyclerView for all users -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_all_catalogs_merchant"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/loadingProgressBar"
        android:layout_marginBottom="120dp"
        android:padding="16dp"/>

    <!-- BottomNavigationView -->
    <include layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>