<!-- item_service.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Service frame -->
    <FrameLayout
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView_service_name"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:background="@drawable/red_border_item"
            android:gravity="center"
            android:text="@string/service_name"
            android:textSize="16sp" />

        <!-- Additional details for the service -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/textView_durationAndUnit"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/duration_durationunit"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView_priceAndCurrency"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/price_currency"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <!-- ImageView elements -->

        <ImageView
            android:id="@+id/imgView_eye"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="top|end"
            android:layout_marginEnd="80dp"
            android:src="@drawable/ic_eye"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/imgView_pencil"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="top|end"
            android:layout_marginEnd="50dp"
            android:src="@drawable/ic_pencil"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/imgView_remove"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="top|end"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_delete"
            android:importantForAccessibility="no" />
    </FrameLayout>
</LinearLayout>
